--- a/src/main/static-content/wwwroot/graph.html
+++ b/src/main/static-content/wwwroot/graph.html
@@ -18,7 +18,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Amazon Kinesis Data Visualization Sample</title>
+  <title>Amazon Kinesis EEG Measurement Data Visualization </title>
 
   <link rel="stylesheet" href="/graph.css" type="text/css"></link>
 
@@ -36,7 +36,6 @@
   <div id="description"></div>
   <div id="graph"></div>
   <div id="updatedBy"></div>
-  <div id="topNContainer"><div id="topNDescription"></div><div id="topN"></div></div>
 </body>
 
 <html>
