big jump: webserver running, just need to show data

--- a/src/main/static-content/wwwroot/graph.html
+++ b/src/main/static-content/wwwroot/graph.html
@@ -18,7 +18,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Amazon Kinesis Data Visualization Sample</title>
+  <title>EEG sensor Data Visualization</title>
 
   <link rel="stylesheet" href="/graph.css" type="text/css"></link>
 
