--- a/src/main/static-content/wwwroot/graph.html
+++ b/src/main/static-content/wwwroot/graph.html
@@ -1,17 +1,3 @@
-<!--
- Copyright 2014 Amazon.com, Inc. or its affiliates. All Rights Reserved.
-
- Licensed under the Amazon Software License (the "License").
- You may not use this file except in compliance with the License.
- A copy of the License is located at
-
- http://aws.amazon.com/asl/
-
- or in the "license" file accompanying this file. This file is distributed
- on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
- express or implied. See the License for the specific language governing
- permissions and limitations under the License.
- -->
 <!doctype html>
 
 <html lang="en">
@@ -36,9 +22,10 @@
   <div id="description"></div>
   <div id="graph"></div>
   <div id="updatedBy"></div>
-  <div id="topNContainer">
-  <div id="topNDescription"></div>
-  <div id="topN"></div></div>
+  <div id="measurementContainer">
+	  <div id="measurementDescription"></div>
+	  <div id="measurement"></div>
+  </div>
 </body>
 
 <html>
