--- a/src/main/static-content/wwwroot/graph.html
+++ b/src/main/static-content/wwwroot/graph.html
@@ -1,3 +1,17 @@
+<!--
+ Copyright 2014 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+
+ Licensed under the Amazon Software License (the "License").
+ You may not use this file except in compliance with the License.
+ A copy of the License is located at
+
+ http://aws.amazon.com/asl/
+
+ or in the "license" file accompanying this file. This file is distributed
+ on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
+ express or implied. See the License for the specific language governing
+ permissions and limitations under the License.
+ -->
 <!doctype html>
 
 <html lang="en">
@@ -16,17 +30,15 @@
 
   <!-- Include the Amazon Kinesis Data Visualization Sample Application graph script and stylesheet -->
   <script src="graph.js"></script>
-  
 </head>
 
 <body>
   <div id="description"></div>
   <div id="graph"></div>
   <div id="updatedBy"></div>
-  <div id="measurementContainer">
-	  <div id="measurementDescription"></div>
-	  <div id="measurement"></div>
-  </div>
+  <div id="topNContainer">
+  <div id="topNDescription"></div>
+  <div id="topN"></div></div>
 </body>
 
 <html>
