--- a/src/main/static-content/wwwroot/graph.html
+++ b/src/main/static-content/wwwroot/graph.html
@@ -21,12 +21,12 @@
 
 <body>
   <div id="description"></div>
+  <div id="userDisplayed"></div>
   <div id="graph"></div>
-  <div id="updatedBy"></div>
   <div id="measurementContainer">
 	  <div id="measurementDescription"></div>
 	  <div id="measurement"></div>
   </div>
 </body>
 
-<html>
+</html>
